# tactile_benchmark

./: .gitignore  README.md  pyproject.toml
.specify/: feature.json
assets/: README.md  asset_manifest.csv
docs/: 00_gap_analysis.md  README.md  ai_prompts.md  asset_license_policy.md  asset_setup.md  baseline_framework.md  baseline_protocol.md  benchmark_spec.md  checklist.md  current_project_state.md  data_collection_protocol.md  dataset_card_mock.md  dataset_protocol.md  evaluation_protocol.md  fr3_articulation_introspection.md  fr3_asset_discovery.md  fr3_control_contract.md  fr3_controller_minimal_runtime_smoke.md  fr3_differential_ik_diagnostic.md  fr3_ee_controller_minimal_runtime_smoke.md  fr3_ee_controller_plan.md  fr3_ee_to_press_button_planning.md  fr3_end_effector_placeholder_plan.md  fr3_ik_safety_refinement.md  fr3_load_only_visual_smoke.md  fr3_press_button_approach_only_runtime_smoke.md  fr3_press_button_integration_plan.md  fr3_press_button_press_runtime_smoke.md  generalization_protocol.md  installation.md  isaac_contact_force_second_probe.md  isaacsim6_gpu_contact_status.md  lightwheel_backend_probe.md  lightwheel_integration_plan.md  lightwheel_task_mapping.md  milestone_a_press_button_runtime_pipeline.md  mock_boundary.md  paper_plan.md  press_button_contact_force_probe.md  press_button_dataset_collection_smoke.md  (+18 more)
isaac_tactile_libero/: __init__.py  version.py
requirements/: isaac-sim-6.0.1.md  lock-py312.txt
scripts/: audit_repository.py  build_g0_rebaseline_evidence.py  build_isaacsim6_ab_report.py  check_asset_manifest.py  evaluate.py  (+62 more)
(+516 files in other folders)
