[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-tactile-libero"
version = "0.1.0"
description = "Phase 1 mock skeleton for the Isaac-Tactile-LIBERO benchmark contract."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6",
  "h5py>=3.10",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]
train = [
  "torch>=2.0",
]

[tool.setuptools.packages.find]
include = ["isaac_tactile_libero*"]
