[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-tactile-libero"
version = "0.1.0"
description = "Isaac-Tactile-LIBERO benchmark reconstruction library."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6",
  "h5py>=3.10",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]
train = [
  "torch>=2.0",
]

[tool.setuptools.packages.find]
include = ["isaac_tactile_libero*"]
